possible fixes for ios mobile sidenav invisible issue

--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -42,6 +42,7 @@ app-topnav {
 mat-sidenav-container, .mat-sidenav-container, .mat-drawer-container {
   position: unset;
   z-index: unset;
+  overflow:unset;
 }
 .example-container {
   /* display: absolute; */
@@ -56,6 +57,7 @@ mat-sidenav-container, .mat-sidenav-container, .mat-drawer-container {
   left: 0;
   right: 0;
   //overflow-x: hidden;
+  overflow: visible;
 
   background: white;
 }
@@ -81,7 +83,6 @@ h3 {
     top: 37px;
     width: 200px;
     position: fixed !important;
-    /* z-index: 1;*/
     height: 100%;
     left: 0;
     //overflow-x: hidden;
@@ -205,7 +206,7 @@ mat-radio-button {
 
   .fixedHead {
     width: 100%;
-    height: 24%;
+    height: 40%; //24%;
     //display: flex;
     //flex-direction: column;
   }
@@ -214,7 +215,8 @@ mat-radio-button {
   }*/
 
   .content {
-    margin-top:110px;
+    //margin-top:110px;
+    margin-top: 40%;
   }
   
       // all elements within will need to be rearranged and sized
@@ -232,7 +234,7 @@ mat-radio-button {
     margin-bottom: -1em;
   }
   h3 {
-    font-size:small;
+    //font-size:small;
     font-weight: bold;
     padding: 10px 0 0 0;
     margin-bottom: 0px;
@@ -243,8 +245,9 @@ mat-radio-button {
   
   
   .example-sidenav {
-    width: 0px;
+    width: 10px;
     background: white;
+    overflow: visible;
     //position: unset!important;
   }
   
